--- a/website-features.html
+++ b/website-features.html
@@ -356,6 +356,9 @@ div.csl-indent {
 <div class="bulb">
 <p>Some explanations that will hopefully make your work with this webpage or learning the material itself easier.</p>
 </div>
+<div class="def">
+<p>These boxes contain important definitions relating to the methods we explore in this companion. All definitions used on the module appear in the weekly glossary (see left-hand menu).</p>
+</div>
 <div class="puzzle">
 <p>A brief question which tests your understanding of the previous material.</p>
 </div>
