--- a/website-features.html
+++ b/website-features.html
@@ -357,13 +357,13 @@ div.csl-indent {
 <p>Some explanations that will hopefully make your work with this webpage or learning the material itself easier.</p>
 </div>
 <div class="def">
-<p>These boxes contain important definitions relating to the methods we explore in this companion. All definitions used on the module appear in the weekly glossary (see left-hand menu).</p>
+<p>These boxes contain important definitions relating to the methods we explore in this companion. All definitions used on the module – substantive and methodological – appear in the weekly glossary (see left-hand menu).</p>
 </div>
 <div class="puzzle">
 <p>A brief question which tests your understanding of the previous material.</p>
 </div>
 <div class="warning">
-<p>This appears when you need to be careful with your coding in R to avoid problems.</p>
+<p>This appears when you need to be careful when working with R to avoid problems.</p>
 </div>
 </div>
             </section>
